Fixing nav bar spacing

--- a/src/css/quality.css
+++ b/src/css/quality.css
@@ -57,7 +57,7 @@ h4{
 	margin-left: 130px;
 	margin-top: 0px;
 	margin-bottom: 0px;
-	
+
 }
 
 /*Used for the YERC logo and title for the page.*/
@@ -73,7 +73,7 @@ h4{
   	float: left;
  	color: white;
   	text-align: center;
-  	padding: 12px;
+  	padding: 20px;
   	text-decoration: none;
  	font-size: 24px;
  	font-family: 'Bebas Neue', sans-serif;
@@ -82,8 +82,8 @@ h4{
 /* Logo */
 .header a.logo {
 	background: url(../img/yerc_logo.png);
-	width: 150px;
-	height: 150px;
+	width: 130px;
+	height: 130px;
 	background-size: 100% auto;
 	background-repeat: no-repeat;
 	margin-bottom: 0px;
